2021-05-09  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (amsart.4ht, amsbook.4ht, amsproc.4ht,
	amsldoc.4ht, amsdtx.4ht, acm_proc_article-sp.4ht, spanish.4ht):
	\write-1 version.

2021-05-06  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (menukeys.4ht): use \Picture* for menukey images.
	* tex4ht-4ht.tex (fontawesome5.4ht, fontawesome5-hooks.4ht,
	fontawesome5-utex-helper-hooks.4ht): added support for Fontawesome5
	package.
	https://puszcza.gnu.org.ua/bugs/index.php?511
	* tex4ht-fonts-noncjk.tex (
	tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/fontawesome/fa5.htf
	): added Htf file for Fontawesome5 fonts.
	https://puszcza.gnu.org.ua/bugs/index.php?511

2021-05-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (colortbl.4ht),
	tex4ht-html4.tex (html4.4ht): added support for \arrayrulecolor 
	command.
	https://tex.stackexchange.com/a/595571/2891
	* tex4ht-4ht.tex (menukeys.4ht): added support for the menukeys
	package. https://puszcza.gnu.org.ua/bugs/?509
	* tex4ht-html4.4ht (html4.4ht): replace ~ by "\ " in TOC
	rendering macros. It should fix issues with Spanish Babel. 
	https://tex.stackexchange.com/a/595688/2891
	* tex4ht-4ht.tex (spanish.4ht): fixed issues with \' accent.
	https://tex.stackexchange.com/a/595688/2891

2021-05-02  Karl Berry  <karl@freefriends.org>

	* Makefile (diff-src, install-src, list-src): new targets
	to handle source files, found via svn status -v.
	* README: update.
	* archive/: move Makefile.exp and extra-bin/fls* here,
	so we don't install them as current source files.
	Still hope to use them one day.

	* tex4ht-4ht.tex (polyglossia.4ht, tuenc-xetex-input.4ht): 2021.
	(aa.4ht): \write version.

2021-04-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): added special group in order
	to support subscripts in upright Greek characters.
	https://tex.stackexchange.com/a/595005/2891
	* tex4ht-mathml.tex (mathml.4ht): added special group to