@@ -338,9 +338,9 @@ to include the above (new) ``TeX4ht license text''.  I don't understand.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 \<book.4ht\><<<
-% book.4ht                             |version %
-% Copyright (C) |CopyYear.1997.      Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% book.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1997. Eitan M. Gurari
+|<TeX4ht copywrite|>
 |<book / report / article cut points|>
 |<book et al tocs|>
 |<chapters for book / report|>
@@ -378,10 +378,9 @@ to include the above (new) ``TeX4ht license text''.  I don't understand.
 >>>                        \AddFile{2}{report}
 
 \<article.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-% article.4ht                           |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% article.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1997. Eitan M. Gurari
+|<TeX4ht copywrite|>
 
 |<book / report / article cut points|>
 |<config article.sty utilities|>
@@ -11442,7 +11441,7 @@ Foo
 \<caption.4ht\><<<
 % caption.4ht (|version), generated from |jobname.tex
 % Copyright |CopyYear.2007. Eitan M. Gurari
-|<TeX4ht copyright|>
+|<TeX4ht copywrite|>
 |<caption shared config|>
 |<caption redefine makecaption|>
 |<caption addtocontents|>
@@ -11457,8 +11456,8 @@ Foo
 
 \<caption-hooks.4ht\><<<
 % caption-hooks.4ht (|version), generated from |jobname.tex
-% Copyright 2020 TeX Users Group
-|<TeX4ht copyright|>
+% Copyright 2020-2021 TeX Users Group
+|<TeX4ht license text|>
 \:AtEndOfPackage{%
   \long\def\caption@If@Package@Loaded#1[#2]#3#4{}
   \renewcommand*\caption@redefine{%
@@ -22787,10 +22786,9 @@ This modification is needed since Stefan
 \Link[http://babel.alis.com:8080/]{}{}Create your own multilingual Web\EndLink
 
 \<babel.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% babel.4ht                             |version %
-% Copyright (C) |CopyYear.1999.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% babel.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1999. Eitan M. Gurari
+|<TeX4ht copywrite|>
 
 |<babel.def|>
 \Hinput{babel}
@@ -24710,10 +24708,9 @@ A \''\relax' is prepended to the start of the definitions
 %%%%%%%%%%%%%
 
 \<beamer.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% beamer.4ht                            |version %
-% Copyright (C) |CopyYear.2003.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% beamer.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2003. Eitan M. Gurari
+|<TeX4ht copywrite|>
 |<shared conf beamer|>
 \ifx \beamer@version\:UnDef
    |<shared conf beamer 0.8 and 0.3|>
